created plotData func; created event functionality; dynamically created list of IDs via d3

--- a/Code/index.html
+++ b/Code/index.html
@@ -22,7 +22,7 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <select id="selDataset" onchange="onChange(this.value)"></select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -47,9 +47,10 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./static/js/app.js"></script>
-  <script src="./static/js/bonus.js"></script>
-  <script src="samples.json"></script>
+  <script src="static/js/plots.js"></script>
+  <script src="static/js/app.js"></script>
+ <!-- <script src="./static/js/bonus.js"></script> -->
+ <!-- <script src="samples.json"></script> -->
   
 </body>
 
